--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,30 @@
-# GitHub Pages에 정적 콘텐츠를 배포하기 위한 간단한 워크플로우
-name: Deploy static content to Pages
+name: Build and Deploy
 
 on:
-  # 기본 브랜치에 대한 푸시 이벤트 발생 시 실행
   push:
-    branches: ['main']
-
-  # Actions 탭에서 수동으로 워크플로우를 실행할 수 있도록 구성
-  workflow_dispatch:
-
-# GITHUB_TOKEN의 권한을 설정하여 GitHub Pages에 배포할 수 있도록 함
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# 동시에 하나의 배포만 허용하도록 구성
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
+    branches: [main]
+  pull_request:
+    branches: [main]
 jobs:
-  # 단순히 배포만 수행하기에 하나의 잡으로만 구성
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v2
+      - name: Setup nodejs
+        uses: actions/setup-node@v2
         with:
-          node-version: 18
-          cache: 'npm'
-      - name: Install dependencies
+          node-version: "17"
+      - name: Install packages
         run: npm install
-      - name: Build
+      - name: Build Vue application
         run: npm run build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Deploy Github page
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          # dist 디렉터리 업로드
-          path: './dist'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
-        with:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist
-          CLEAN: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          publish_dir: ./dist
