--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm install firebase-tools -g && firebase login --no-localhost --reauth --interactive && firebase deploy",
+    "build": "vite build && npm install firebase-tools -g && firebase login --no-localhost --reauth --interactive --debug && firebase deploy",
     "preview": "vite preview"
   },
   "dependencies": {
